Last Commit before sending to client
Mostly style updates.

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -37,6 +37,23 @@ body { }
   background-position: center center;
 }
 
+body.page-id-11 #header-image {
+  background-position: 0 90%;
+}
+
+body.page-id-9 #header-image {
+  background-position: 0 60%;
+}
+
+body.woocommerce-cart #header-image {
+  background-position: 0 35%;
+}
+
+body.woocommerce-checkout #header-image {
+  background-position: 0 66%;
+}
+
+
 /* ==========================================================================
    Header
    ========================================================================== */
@@ -55,6 +72,7 @@ body { }
    padding-left: 70px;
    padding-right: 30px;
    font-weight: bold;
+   text-transform: uppercase;
 }
 
 /* ==========================================================================
@@ -103,6 +121,8 @@ body { }
 .content-info {
    background-color: #ccc;
    min-height: 350px;
+   margin-top: 30px;
+   padding-top: 30px;
 }
 
 
