--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -1,72 +1,3 @@
-.well-dark {
-  border-color: #75787A;
-  background-color: #75787A;
-  background-image: url(/wp-content/uploads/use_your_illusion.png);
-  background-repeat: repeat;
-  position: relative;
-  h1, h2, h3, h4, h5, h6 {
-    color: #fff;
-  }
-  p {
-    color: #F5F5F5;
-  }
-  .link-list {
-    a {
-      color: #F5F5F5;
-    }
-  }
-  &.well-main {
-    h1, h2, h3, h4, h5, h6, p, a {
-      .text-center;
-    }
-    .col-sm-3 {
-      background-color: #F5F5F5;
-      top: 0;
-      bottom: 0;
-      right: 0;
-      position: absolute;
-      display: block;
-      .link-list {
-        margin-left: 0;
-        padding-left: 0;
-        list-style: none;
-        li {
-          padding: 10px;
-          a {
-            color: #202020;
-          }
-        }
-      }
-    }
-  }
-}
-
-.well-secondary {
-  h2 {
-    display: inline;
-    padding-right: 15px;
-    border-right: 2px solid #202020;
-  }
-  p {
-    display: inline;
-    margin-left: 15px;
-  }
-  a {
-    display: inline;
-    float: right;
-    padding-right: 30px;
-  }
-}
-
-.row-two-column {
-  h2 {
-    margin-top: 0;
-  }
-  .well {
-    padding-bottom: 30px;
-  }
-}
-
 // Content wrapper
 .wrap {
   padding-top: (@navbar-height * 1.0);
@@ -79,26 +10,13 @@ body.page-template-template-singlepagelayout-php {
   padding-top: 0;
 }
 
-// Main content area
-.main { }
-
-
-.page-header {
-  margin-top: 0;
-  h1 {
-    margin-top: 0;
-  }
-}
-
 //@content-spacing-top: (@navbar-height * 1.3);
 @content-spacing-top: 30px;
 @content-spacing-bottom: (@navbar-height * 0.3);
 
-@call-to-action-height: 90px;
-
 .content {
-   padding-top: round(@content-spacing-top);
-   padding-bottom: round(@content-spacing-bottom);
+   //padding-top: round(@content-spacing-top);
+   //padding-bottom: round(@content-spacing-bottom);
 }
 
 section.single-page-section {
@@ -168,56 +86,6 @@ section.single-page-section {
       padding-top: (@padding-large-vertical * 2);
       padding-bottom: (@padding-large-vertical * 2);
       //.text-center;
-    }
-   }
-   &.single-page-section-jumbotron {
-    overflow-x: hidden!important;
-    position: relative;
-   }
-   .jumbotron {
-    padding-top: 0;
-    .text-center;
-      .main-image {
-        background-image: url(/wp-content/uploads/starburst-wide-400x300.png);
-        background-size: contain;
-        background-position: 0 0;
-        background-color: transparent;
-        background-repeat: no-repeat;
-        padding: 15%;
-        margin-top: -100px;
-        .center-block;
-        .size(100%; 100%);
-        img {
-          border: 15px solid @brand-primary;
-          .transition(0.5s 0 all ease);
-          &:hover {
-            .transition(0.5s 0 all ease);
-          }
-        }
-      }
-   }
-   &.single-page-section-call-to-action {
-    height: (@call-to-action-height * 6);
-    padding-top: (((@call-to-action-height * 7) / 2) - @call-to-action-height);
-    padding-bottom: (((@call-to-action-height * 7) / 2) - @call-to-action-height);
-    .call-to-action {
-      .secondary-background-base;
-      display: block;
-      width: 100%;
-      height: @call-to-action-height;
-      .box-shadow(inset 0 0 15px rgba(0,0,0,0.4));
-      .transition(0.5s 0 all ease);
-      &:hover {
-        .box-shadow(inset 0 0 30px rgba(0,0,0,0.6));
-        .transition(0.5s 0 all ease);
-      }
-      p {
-        font-size: 24px;
-        padding: 0;
-        line-height: @call-to-action-height;
-        height: @call-to-action-height;
-        margin: 0;
-      }
     }
   }
 }
