--- a/assets/less/layouts/_header.less
+++ b/assets/less/layouts/_header.less
@@ -1,19 +1,13 @@
-@navbar-custom-color:             #777;
-@navbar-custom-bg:                #FFF;
-@navbar-custom-border:            darken(@navbar-custom-bg, 6.5%);
-@navbar-height:                   90px;
-
 .banner {
   text-transform: uppercase;
    &.navbar-custom {
       border: 0;
-      font-weight: 700;
       padding-bottom: 0;
       margin-bottom: 0;
-      background-color: rgba(255,255,255,0.0)!important;
+      //background-color: rgba(255,255,255,0.0)!important;
       .transition(0.5s 0 all ease);
       &.affix-top {
-        background-color: rgba(255,255,255,0.0)!important;
+        //background-color: rgba(255,255,255,0.0)!important;
         .transition(0.5s 0 all ease);
         .navbar-nav > .active > a, .navbar-nav > .active > a:hover, .navbar-nav > .active > a:focus {
           color: #fff;
@@ -32,41 +26,67 @@
         left: 0;
         right: 0;
         z-index: 2000;
-        background-color: rgba(255,255,255,0.90)!important;
+        //background-color: rgba(255,255,255,0.90)!important;
         .transition(0.5s 0 all ease);
       }
    }
    .navbar-brand{
-      @brand-height: (@navbar-height - 30px);
+      @brand-height: (@navbar-height);
       @brand-width: (@navbar-height * 2.2);
       .size(@brand-width; @brand-height);
       background-repeat: no-repeat;
-      background-position: center center;
-      background-size: contain;
-      .text-hide();
-      .center-block();
-      @calc-margin: (@navbar-height - @brand-height);
-      @margin-top: (@calc-margin * 0.25);
-      margin-top: round(@margin-top);
-      margin-right: 40px;
+      background-position: 0 50%;
+      background-size: 36%;
+      padding-left: 80px;
+      font-family: 'Verlag-Bold';
+      font-size: 21px;
+      line-height: 21px;
+      //.center-block();
+      //@calc-margin: (@navbar-height - @brand-height);
+      //@margin-top: (@calc-margin * 0.25);
+      //margin-top: round(@margin-top);
+      //margin-right: 40px;
       background-color: transparent;
+      //.text-hide();
+      .brand-text {
+        display: block;
+        margin-top: -10px;
+      }
    }
    .navbar-left {
-      width: 50%;
+      //width: 50%;
    }
    .navbar-right {
-      width: 25%;
+      //width: 25%;
       div {
         display: inline-block;
         padding-top: (@navbar-padding-vertical - (@font-size-base * 0.5));
       }
    }
+  #menu-primary-navigation {
+    font-size: 16px;
+  }
 }
 
 
 body.logged-in.admin-bar {
   .banner {
-    margin-top: 32px!important;
+    &.navbar-fixed-top {
+      margin-top: 32px!important;
+    }
+    &.navbar-static-top {
+      margin-top: 0!important;
+      &.affix {
+        margin-top: 32px!important;
+      }
+    }
+  }
+}
+
+.page-header {
+  margin-top: 0;
+  h1 {
+    margin-top: 0;
   }
 }
 
@@ -78,4 +98,32 @@ body.logged-in.admin-bar {
     margin-left: 0;
     margin-right: 0;
   }
+}
+
+ #header-image {
+   -moz-box-shadow:    inset 0 0 10px rgba(0,0,0,0.2);
+   -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
+   box-shadow:         inset 0 0 10px rgba(0,0,0,0.2);
+  height: 300px;
+  display: block;
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+body.page-id-11 #header-image {
+  background-position: 0 90%;
+}
+
+body.page-id-9 #header-image {
+  background-position: 0 60%;
+}
+
+body.woocommerce-cart #header-image {
+  background-position: 0 35%;
+}
+
+body.woocommerce-checkout #header-image {
+  background-position: 0 66%;
 }
