--- a/assets/less/layouts/_header.less
+++ b/assets/less/layouts/_header.less
@@ -83,17 +83,10 @@ body.logged-in.admin-bar {
   }
 }
 
-.page-header {
-  margin-top: 0;
-  h1 {
-    margin-top: 0;
-  }
-}
-
 .wrap.container-fluid {
   padding-right: 0;
   padding-left: 0;
-  margin-top: -(@navbar-height * 2);
+  //margin-top: -(@navbar-height * 2);
   .row {
     margin-left: 0;
     margin-right: 0;
@@ -111,7 +104,7 @@ body.logged-in.admin-bar {
   background-repeat: no-repeat;
   background-position: center center;
 }
-
+/*
 body.page-id-11 #header-image {
   background-position: 0 90%;
 }
@@ -127,3 +120,4 @@ body.woocommerce-cart #header-image {
 body.woocommerce-checkout #header-image {
   background-position: 0 66%;
 }
+*/
