--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -9,6 +9,16 @@ body.page-template-template-singlepagelayout-php {
   padding-top: 0;
 }
 
+body.home {
+section.single-page-section {
+   &:first-of-type {
+      h2 {
+        display: none;
+      }
+    }
+  }
+}
+
 //@content-spacing-top: (@navbar-height * 1.3);
 @content-spacing-top: 30px;
 @content-spacing-bottom: (@navbar-height * 0.3);
