--- a/assets/less/layouts/_header.less
+++ b/assets/less/layouts/_header.less
@@ -4,17 +4,17 @@
       border: 0;
       padding-bottom: 0;
       margin-bottom: 0;
-      //background-color: rgba(255,255,255,0.0)!important;
       .transition(0.5s 0 all ease);
       &.affix-top {
-        //background-color: rgba(255,255,255,0.0)!important;
         .transition(0.5s 0 all ease);
-        .navbar-nav > .active > a, .navbar-nav > .active > a:hover, .navbar-nav > .active > a:focus {
+        .navbar-nav > li > a {
           color: #fff;
           background-color: transparent;
           .transition(0.5s 0 all ease);
         }
-        .navbar-nav > li > a {
+        .navbar-nav > .active > a,
+        .navbar-nav > .active > a:hover,
+        .navbar-nav > .active > a:focus {
           color: #fff;
           background-color: transparent;
           .transition(0.5s 0 all ease);
@@ -28,6 +28,11 @@
         z-index: 2000;
         //background-color: rgba(255,255,255,0.90)!important;
         .transition(0.5s 0 all ease);
+        .navbar-nav > .active > a {
+          color: #222222!important;
+          background-color: rgba(231,231,231,0.8);
+          .transition(0.5s 0 all ease);
+        }
       }
    }
    .navbar-brand{
@@ -94,10 +99,9 @@ body.logged-in.admin-bar {
 }
 
  #header-image {
-   -moz-box-shadow:    inset 0 0 10px rgba(0,0,0,0.2);
-   -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
-   box-shadow:         inset 0 0 10px rgba(0,0,0,0.2);
-  height: 300px;
+   -moz-box-shadow:    inset 0 0 20px rgba(0,0,0,0.6);
+   -webkit-box-shadow: inset 0 0 20px rgba(0,0,0,0.6);
+   box-shadow:         inset 0 0 20px rgba(0,0,0,0.6);
   display: block;
   width: 100%;
   background-size: cover;
